<resources>
    <string name="app_name">baikt</string>
    <string name="a">a</string>
    <string name="a_1">Go for a walk and feed the dog</string>
    <string name="a_2">Leaving for a week, French Bulldog Wilfred needs help feeding twice a day and walk from 26 to 30 September. I bought food, it will be easy.</string>
    <string name="a_3">Reward 34$</string>
    <string name="a_4">3 HERALD</string>
    <string name="a_5">400m from you</string>
    <string name="a_6">Respond</string>
    <string name="a_7">Until 26.09</string>
    <string name="a_8">Anderson G.</string>
    <string name="a_9">4.9</string>
    <string name="a_10">9:41</string>
    <string name="a_11">Search</string>
    <string name="a_12">Next to you</string>
    <string name="a_13">On the map</string>
    <string name="a_14">Until 28.09</string>
    <string name="a_15">Water the flowers once a week</string>
    <string name="a_16">Categories</string>
    <string name="a_17">See all</string>
    <string name="a_18">Moving and things</string>
    <string name="a_19">Help around the house</string>
    <string name="a_20">24 tasks</string>
    <string name="a_21">5 tasks</string>
</resources>