<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="375dp"
    android:layout_height="832dp"
    tools:context=".form1"
    android:background="@drawable/bt5">
<EditText
    android:layout_width="263dp"
    android:layout_height="48dp"
    android:text="@string/a_11"
    android:textColor="@color/white"
    android:background="@drawable/bt1"
    app:backgroundTint="@null"
    android:textSize="@dimen/b_3"
    android:layout_marginTop="66dp"
    android:layout_marginLeft="24dp"
    />
    <ImageView
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/v18"
        android:layout_marginTop="78dp"
        android:layout_marginLeft="36dp"
        />

    <TextView
        android:layout_width="50dp"
        android:layout_height="17dp"
        android:layout_marginLeft="72dp"
        android:layout_marginTop="81dp"
        android:text="@string/a_11"
        android:textColor="@color/c_5"
        android:textSize="@dimen/b_2"
        android:textStyle="bold" />
    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/r1"
        android:layout_marginTop="58dp"
        android:layout_marginLeft="303dp"
        />
    <ImageView
        android:layout_width="30dp"
        android:layout_height="20dp"
        android:src="@drawable/v17"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="322dp"
        />

    <TextView
        android:layout_width="121dp"
        android:layout_height="24dp"
        android:text="@string/a_12"
        android:textColor="@color/c_2"
        android:textSize="@dimen/b_5"
        android:textStyle="bold"
        android:layout_marginTop="144dp"
        android:layout_marginLeft="24dp"/>
<TextView
    android:layout_width="89dp"
    android:layout_height="26dp"
    android:text="@string/a_13"
    android:textSize="@dimen/b_2"
    android:textColor="@color/c_6"
    android:layout_marginTop="148dp"
    android:layout_marginLeft="263dp"
    />
    <ImageView
        android:layout_width="5dp"
        android:layout_height="10dp"
        android:src="@drawable/r4"
        android:layout_marginTop="154dp"
        android:layout_marginLeft="347dp"
        />
    <Button
        android:layout_width="264dp"
        android:layout_height="326dp"
        android:text="@string/a_1"
        android:textColor="@color/c_7"
        android:background="@drawable/bt4"
        app:backgroundTint="@null"
        android:layout_marginTop="198dp"
        android:layout_marginLeft="24dp"
        />
    <ImageView
        android:layout_width="232dp"
        android:layout_height="228dp"
        android:src="@drawable/r5"
        android:layout_marginTop="220dp"
        android:layout_marginLeft="40dp"
        />
    <TextView
        android:layout_width="68dp"
        android:layout_height="20dp"
        android:text="@string/a_7"
        android:textColor="@color/white"
        android:textSize="@dimen/b_4"
        android:layout_marginTop="230dp"
        android:layout_marginLeft="55dp"
        />
    <ImageView
        android:layout_width="20dp"
        android:layout_height="18dp"
        android:src="@drawable/d5"
        android:layout_marginTop="230dp"
        android:layout_marginLeft="235dp"
        />
    <Button
        android:layout_width="143dp"
        android:layout_height="48dp"
        android:text="@string/a_9"
        android:textColor="@color/c_5"
        android:background="@drawable/bt2"
        app:backgroundTint="@null"
        android:layout_marginTop="390dp"
        android:layout_marginLeft="60dp"
        />
    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/d4"
        android:layout_marginTop="395dp"
        android:layout_marginLeft="65dp"
        />
    <TextView
        android:layout_width="83dp"
        android:layout_height="14dp"
        android:text="@string/a_8"
        android:textSize="@dimen/b_4"
        android:textColor="@color/white"
        android:layout_marginTop="405dp"
        android:layout_marginLeft="110dp"
        />
    <ImageView
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:src="@drawable/d10"
        android:layout_marginTop="405dp"
        android:layout_marginLeft="185dp"/>

    <TextView
        android:layout_width="142dp"
        android:layout_height="44dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="460dp"
        android:text="@string/a_1"
        android:textColor="@color/c_2"
        android:textSize="@dimen/b_2"
        android:textStyle="bold" />
    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/r6"
        android:layout_marginTop="460dp"
        android:layout_marginLeft="240dp"
        />
    <Button
        android:layout_width="264dp"
        android:layout_height="326dp"
        android:text="@string/a"
        android:textSize="@dimen/b_2"
        android:textColor="@color/c_2"
        android:background="@drawable/bt4"
        app:backgroundTint="@null"
        android:layout_marginTop="198dp"
        android:layout_marginLeft="300dp"
        />
    <ImageView
        android:layout_width="232dp"
        android:layout_height="228dp"
        android:src="@drawable/r7"
        android:layout_marginTop="220dp"
        android:layout_marginLeft="320dp"
        />
    <TextView
        android:layout_width="68dp"
        android:layout_height="20dp"
        android:text="@string/a_14"
        android:textColor="@color/white"
        android:textSize="@dimen/b_4"
        android:layout_marginTop="230dp"
        android:layout_marginLeft="340dp"
        />
    <TextView
        android:layout_width="147dp"
        android:layout_height="44dp"
        android:text="@string/a_15"
        android:layout_marginLeft="320dp"
        android:layout_marginTop="460dp"
        android:textColor="@color/c_2"
        android:textSize="@dimen/b_2"
        android:textStyle="bold"
        />
    <TextView
        android:layout_width="113dp"
        android:layout_height="24dp"
        android:text="@string/a_16"
        android:textSize="@dimen/b_5"
        android:textColor="@color/c_2"
        android:textStyle="bold"
        android:layout_marginTop="544dp"
        android:layout_marginLeft="24dp"
        />
    <TextView
        android:layout_width="49dp"
        android:layout_height="16dp"
        android:text="@string/a_17"
        android:textColor="@color/c_6"
      android:textSize="@dimen/b_2"
        android:layout_marginTop="548dp"
        android:layout_marginLeft="300dp"
        />
    <ImageView
        android:layout_width="5dp"
        android:layout_height="10dp"
        android:src="@drawable/r4"
        android:layout_marginTop="554dp"
        android:layout_marginLeft="357dp"
        />
    <Button
        android:layout_width="327dp"
        android:layout_height="72dp"
        android:background="@drawable/bt3"
        app:backgroundTint="@null"
        android:text="@string/a_1"
        android:textColor="@color/white"
        android:layout_marginTop="588dp"
        android:layout_marginLeft="24dp"
        />
    <TextView
        android:layout_width="155dp"
        android:layout_height="20dp"
        android:text="@string/a_18"
        android:textSize="@dimen/b_2"
        android:textStyle="bold"
        android:textColor="@color/c_2"
        android:layout_marginTop="603dp"
        android:layout_marginLeft="96dp"
        />
    <ImageView
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/r9"
        android:layout_marginTop="600dp"
        android:layout_marginLeft="36dp"
        />
    <ImageView
        android:layout_width="10dp"
        android:layout_height="12dp"
        android:src="@drawable/r4"
        android:layout_marginTop="618dp"
        android:layout_marginLeft="329dp"
        />
    <TextView
        android:layout_width="58dp"
        android:layout_height="17dp"
        android:text="@string/a_20"
        android:textSize="@dimen/b_3"
        android:textColor="@color/c_6"
        android:layout_marginTop="627dp"
        android:layout_marginLeft="96dp"
        />
    <Button
        android:layout_width="327dp"
        android:layout_height="72dp"
        android:background="@drawable/bt3"
        app:backgroundTint="@null"
        android:text="@string/a_1"
        android:textColor="@color/white"
        android:layout_marginTop="676dp"
        android:layout_marginLeft="24dp"
        />
    <TextView
        android:layout_width="190dp"
        android:layout_height="20dp"
        android:text="@string/a_19"
        android:textSize="@dimen/b_2"
        android:textStyle="bold"
        android:textColor="@color/c_2"
        android:layout_marginTop="691dp"
        android:layout_marginLeft="96dp"
        />
    <ImageView
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/r9"
        android:layout_marginTop="688dp"
        android:layout_marginLeft="36dp"
        />
    <ImageView
        android:layout_width="10dp"
        android:layout_height="12dp"
        android:src="@drawable/r4"
        android:layout_marginTop="706dp"
        android:layout_marginLeft="329dp"
        />
    <TextView
        android:layout_width="58dp"
        android:layout_height="17dp"
        android:text="@string/a_21"
        android:textSize="@dimen/b_3"
        android:textColor="@color/c_6"
        android:layout_marginTop="715dp"
        android:layout_marginLeft="96dp"
        />
    <ImageView
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/r10"
        android:layout_marginTop="721dp"
        android:layout_marginLeft="164dp"
        />

    <ImageView
        android:layout_width="134dp"
        android:layout_height="5dp"
        android:src="@drawable/r11"
        android:layout_marginTop="815dp"
        android:layout_marginLeft="120dp"
        />
    <ImageView
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/r12"
        android:layout_marginTop="768dp"
        android:layout_marginLeft="40dp"
        />
    <ImageView
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/r13"
        android:layout_marginTop="768dp"
        android:layout_marginLeft="102dp"
        />
    <ImageView
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/r14"
        android:layout_marginTop="768dp"
        android:layout_marginLeft="249dp"
        />
    <ImageView
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/r15"
        android:layout_marginTop="768dp"
        android:layout_marginLeft="311dp"
        />
</RelativeLayout>