<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="375dp"
    android:layout_height="832dp"
    tools:context=".MainActivity"
    android:background="@drawable/bt5"
    >

<ImageView
    android:layout_width="376dp"
    android:layout_height="397dp"
    android:src="@drawable/d1"
    android:layout_marginTop="-1dp"
    android:layout_marginLeft="-1dp"
    />
    <ImageView
        android:layout_width="9dp"
        android:layout_height="18dp"
        android:src="@drawable/d2"
        android:layout_marginTop="62dp"
        android:layout_marginLeft="24dp"
        />
    <ImageView
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/d3"
        android:layout_marginTop="59dp"
        android:layout_marginLeft="326dp"
        />


    <TextView
        android:layout_width="238dp"
        android:layout_height="64dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="424dp"
        android:text="@string/a_1"
        android:textColor="@color/c_2"
        android:textSize="@dimen/b_1"
        android:textStyle="bold" />
    <ImageView
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/d5"
        android:layout_marginTop="431dp"
        android:layout_marginLeft="327dp"
        />

    <TextView
        android:layout_width="327dp"
        android:layout_height="88dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="504dp"
        android:text="@string/a_2"
        android:textColor="@color/c_2"
        android:textSize="@dimen/b_2" />
    <ImageView
        android:layout_width="15.29dp"
        android:layout_height="12.94dp"
        android:src="@drawable/d6"
        android:layout_marginTop="612dp"
        android:layout_marginLeft="24dp"
        />
    <TextView
        android:layout_width="87dp"
        android:layout_height="17dp"
        android:text="@string/a_3"
        android:textSize="@dimen/b_3"
        android:textColor="@color/c_2"
        android:layout_marginTop="610dp"
        android:layout_marginLeft="51dp"
        />
    <ImageView
        android:layout_width="17dp"
        android:layout_height="17dp"
        android:src="@drawable/d7"
        android:layout_marginTop="645dp"
        android:layout_marginLeft="24dp"
        />
    <TextView
        android:layout_width="75dp"
        android:layout_height="17dp"
        android:text="@string/a_4"
        android:textSize="@dimen/b_3"
        android:textColor="@color/c_2"
        android:layout_marginTop="643dp"
        android:layout_marginLeft="51dp"
        />
    <TextView
        android:layout_width="106dp"
        android:layout_height="17dp"
        android:text="@string/a_5"
        android:textSize="@dimen/b_4"
        android:textColor="@color/c_3"
        android:layout_marginTop="645dp"
        android:layout_marginLeft="138dp"
        />
    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/d8"
        android:layout_marginTop="714dp"
        android:layout_marginLeft="24dp"
        />
    <Button
        android:layout_width="251dp"
        android:layout_height="60dp"
        android:text="@string/a_6"
        android:background="@drawable/bt_1"
        app:backgroundTint="@null"
        android:textSize="@dimen/b_4"
        android:textColor="@color/white"
        android:layout_marginTop="714dp"
        android:layout_marginLeft="95dp"
        />
    <ImageView
        android:layout_width="134dp"
        android:layout_height="5dp"
        android:src="@drawable/r11"
        android:layout_marginTop="815dp"
        android:layout_marginLeft="120dp"
        />
    <Button
        android:layout_width="171dp"
        android:layout_height="48dp"
        android:background="@drawable/bt_2"
        app:backgroundTint="@null"
        android:text="@string/a_1"
        android:textColor="@color/c_5"
        android:layout_marginTop="324dp"
        android:layout_marginLeft="24dp"
        />
    <ImageView
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/d4"
        android:layout_marginTop="332dp"
        android:layout_marginLeft="30dp"

        />
    <TextView
        android:layout_width="83dp"
        android:layout_height="14dp"
        android:text="@string/a_8"
        android:textColor="@color/white"
        android:textSize="@dimen/b_4"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="330dp"
        />
    <ImageView
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:src="@drawable/d10"
        android:layout_marginTop="330dp"
        android:layout_marginLeft="160dp"
        />
    <ImageView
        android:layout_width="9dp"
        android:layout_height="9dp"
        android:src="@drawable/d11"
        android:layout_marginTop="350dp"
        android:layout_marginLeft="80dp"
        />
    <TextView
        android:layout_width="21dp"
        android:layout_height="15dp"
        android:text="@string/a_9"
        android:textSize="@dimen/b_4"
        android:textColor="@color/white"
        android:layout_marginTop="345dp"
        android:layout_marginLeft="95dp"
        />
    <TextView
        android:layout_width="68dp"
        android:layout_height="20dp"
        android:text="@string/a_7"
        android:textColor="@color/white"
        android:textSize="@dimen/b_4"
        android:layout_marginTop="338dp"
        android:layout_marginLeft="283dp"
        />
    <ImageView
        android:layout_width="54dp"
        android:layout_height="11.34dp"
        android:src="@drawable/d13"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="12dp"
        />
    <ImageView
        android:layout_width="66.66dp"
        android:layout_height="11.34dp"
        android:src="@drawable/d14"
        android:layout_marginTop="17.33dp"
        android:layout_marginLeft="293.67dp"
        />
</RelativeLayout>